--- a/assets/styl/sections/footer.styl
+++ b/assets/styl/sections/footer.styl
@@ -14,6 +14,7 @@
 
 .bottom ul
   p 1em 1em .5em
+  bb 1px solid bc
 
 .bottom ul li
   m 0 0 .5em
